--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-babel
+SQLAlchemy
+postgres
+Flask
+Flask-Migrate
+babel==2.9.0
 python-dateutil==2.6.0
-flask-moment
-flask-wtf
+flask-moment==0.11.0
+flask-wtf==0.14.3
+flask_sqlalchemy==2.4.4
